handle get list feedback
