# src/routes/user.route.ts
@@ -5,7 +5,10 @@ import { loginController } from "../controllers/user.controller";
 import { protect } from "../middlewares/auth.middleware";
 import { upload } from "../utils/multer";
 import { feedbackSchema } from "../schemas/feedback.schema";
-import { feedbackController } from "../controllers/feedback.controller";
+import {
+  feedbackController,
+  getFeedbacksController,
+} from "../controllers/feedback.controller";
 import { logoutController } from "../controllers/logout.controller";
 
 const router = Router();
@@ -17,6 +20,12 @@ router.post(
   upload.single("image"),
   validateYupSchema(feedbackSchema),
   feedbackController
+);
+
+router.get(
+  "/list/feedbacks",
+  protect(["admin", "resident"]),
+  getFeedbacksController
 );
 
 router.post("/logout", logoutController);
